--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="Images/email_icon.png" alt="email"></a></li>
                 <li><a href="https://www.linkedin.com/in/pui-ki-li-2294ab1a6" target="_blank">
                     <img src="Images/linkedin_icon.png" alt="linkedin"></a></li>
-                <li><a href="https://github.com/BeckyStitchs/PersonalPortfolio" target="_blank">
+                <li><a href="https://github.com/BeckyStitchs" target="_blank">
                     <img src="Images/github_icon.png" alt="github"></a></li>
             </ul>
         </div>
