Resubmit: modify files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title style="font-family: Courier New;">Becky.L Portfolio</title>
 </head>
 <body id="page_top">
@@ -23,7 +24,7 @@
                     <img src="Images/github_icon.png" alt="github"></a></li>
             </ul>
         </div>
-        <div id="navigator">
+        <div>
             <nav>
                 <ul>
                     <li><a href="#aboutme">About Me</a></li>
@@ -35,9 +36,8 @@
         </div>
     </header>
     <main>
-        <section>
-            <a id="aboutme"></a>
-            <h2 class="aboutsubtitle">About Me</h2>
+        <section id="aboutme">
+            <h1>About Me</h1>
             <div class="aboutcontent">
                 <img src="Images/becky_photo.png" width="100" height="100" alt="profile_picture">
                 <p>I have been working in education field as a clerk and IT assistantfor 8 years. During this years, I have completed a par-time bachelor Degree in Digital Media and a part-time Diploma in Computer and Electronic Engineering in Hong Kong. The work experience and study qualification provide various opportunities to enhance my technical skills, communication skills and relevant knowledge toarchives a success in career. Currently, I quited my job in Hong Kong and moved to Calgary for studying my second diploma programme in learning UX design which hopeful assist my career specially to a higher level and identify my position in the industry.</p>
@@ -47,10 +47,9 @@
                 <a href="#page_top">Page Top</a>
             </div>
         </section>
-        <section>
-            <a id="hobbies"></a>
-            <h2 class="othersubtitle">Hobbies</h2>
-            <div class="content1">    
+        <section id="hobbies">
+            <h1>Hobbies</h1>
+            <div class="hobbiescontent">    
                 <figure>
                     <img src="Images/gym.jpeg" width="100" height="100" alt="gym"> 
                     <figcaption>Gymnastics</figcaption>
@@ -73,10 +72,9 @@
                     <a href="#page_top">Page Top</a>
                     </div>
         </section>
-        <section>
-            <a id="goals"></a>
-            <h2 class="othersubtitle">Goals</h2>
-            <div class="content2"> 
+        <section id="goals">
+            <h1>Goals</h1>
+            <div class="goalscontent"> 
                 <p>After finished the Interactive Design Diploma, I would like to work in the field of UX desgin or video production industry to gain work experience and landed in Canada.</p>
             </div> 
             <div class="pageup">
@@ -84,10 +82,9 @@
                 <a href="#page_top">Page Top</a>
             </div>
         </section>
-        <section>
-            <a id="workexperiences"></a>
-            <h2 class="othersubtitle">Work Experiences</h2>
-            <div class="content3">
+        <section id="workexperiences">
+            <h1>Work Experiences</h1>
+            <div class="workcontent">
                 <table>
                     <tr>
                         <th>Company</th>
@@ -115,7 +112,7 @@
                 <img src="Images/pageup_icon.png" width="30" height="30" alt="uparrow_icon"> 
                 <a href="#page_top">Page Top</a>
             </div>
-        </section>    
+        </section> 
     </main>
     <footer>
             &copy; BeckyL@SAIT, 2023
